dummy code that passes the test

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,12 +9,22 @@
         {% block title %}
         {% endblock title %}
     </title>
+        {% block header %}
+
+        {% endblock header %}
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 
 {% block body %}
 
 {% endblock body %}
+
+
+{% block scripts %}
+
+{% endblock scripts %}
 
 </body>
 </html>
