--- a/webstore/templates/product/product_detail.html
+++ b/webstore/templates/product/product_detail.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load product_tags %}
 
 {% block title %}
     {{ object.name }}
@@ -11,7 +10,7 @@
     <div class="product-card">
         <h2>{{ object.name }}</h2>
         <div class="product-description">{{ object.description }}</div>
-        <div class="product-price">{{ object.get_price| product_price }}</div>
+        <div class="product-price">{{ object.get_price }}</div>
         <form id='add-item-form' action="{% url 'cart:add-item' %}">
             {% csrf_token %}
             <input id="product-id" type="hidden" value="{{ object.id }}">
