--- a/webstore/templates/product/product_detail.html
+++ b/webstore/templates/product/product_detail.html
@@ -7,7 +7,7 @@
 
 {% block body %}
     <div id="cart-item-count">{{ cart_items }}</div>
-    <img src="/{{ object.image }}" alt="">
+    <img src="/{{ object.image_url }}" alt="">
     <div class="product-card">
         <h2>{{ object.name }}</h2>
         <div class="product-description">{{ object.description }}</div>
