added materialize and styling

--- a/webstore/templates/base.html
+++ b/webstore/templates/base.html
@@ -3,29 +3,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+
     <title>
         {% block title %}
         {% endblock title %}
     </title>
         {% block header %}
-
         {% endblock header %}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="{% static 'style/navbar.css' %}">
 </head>
+
 <body>
 
-{% block body %}
+    <div class="container">
 
-{% endblock body %}
+    <div class="row">
+        {% include 'navbar.html' %}
+    </div>
+    {% block body %}
+    {% endblock body %}
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="{% static 'scripts/ajax-utils.js' %}"></script>
 
-{% block scripts %}
-
-{% endblock scripts %}
+    {% block scripts %}
+    {% endblock scripts %}
+    </div>
 
 </body>
 </html>
