--- a/webstore/templates/product/product_detail.html
+++ b/webstore/templates/product/product_detail.html
@@ -11,7 +11,7 @@
         <h2>{{ object.name }}</h2>
         <div class="product-description">{{ object.description }}</div>
         <div class="product-price">{{ object.get_price }}</div>
-        <form id='add-item-form' action="{% url 'cart:add-item' %}">
+        <form id="add-item-form" action="{% url 'cart:add-item' %}">
             {% csrf_token %}
             <input id="product-id" type="hidden" value="{{ object.id }}">
             <label>qty.
