--- a/webstore/templates/users/login.html
+++ b/webstore/templates/users/login.html
@@ -1,6 +1,18 @@
+{% extends 'base.html' %}
 
-
-<form action="" method="post">
-    {{ form.as_p }}
-    <input type="submit" value="submit">
-</form>
+{% block body %}
+<div class="row">
+    <div class="col s12 m8 offset-m2">
+    <ul class="collection with-header">
+        <li class="collection-header"><h4>Login</h4></li>
+        <li class="collection-item">
+            <form action="" method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="submit">
+            </form>
+        </li>
+    </ul>
+    </div>
+</div>
+{% endblock body %}
