cart moved from anonymus user to logged

--- a/webstore/templates/product/product_list.html
+++ b/webstore/templates/product/product_list.html
@@ -12,6 +12,7 @@
 
     <div class="col s3">
         <form action="" method="get">
+            {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="filter">
         </form>
