--- a/webstore/templates/order/order_add_delivery.html
+++ b/webstore/templates/order/order_add_delivery.html
@@ -2,15 +2,30 @@
 {% load static %}
 
 {% block body %}
-<ul class="collection with-header">
-<li class="collection-header"><h4>Delivery Details</h4></li>
-<li class="collection-item">
-    <form class="delivery_form" action="#" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-        <input type="submit" value="Create Order" class="btn">
-    </form>
-</li>
-</ul>
+<div class="row">
+  <div class="col s12 m6 add_delivery">
+    <ul class="collection with-header">
+      <li class="collection-header"><h4>Delivery Details</h4></li>
+      <li class="collection-item">
+        <form class="delivery_form" action="#" method="post">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <input type="submit" value="Create Order" class="btn">
+        </form>
+      </li>
+    </ul>
+  </div>
+
+  <div class="col s12 m6 cart_summary">
+    <ul class="collection with-header">
+      <li class="collection-header"><h4>Order items</h4></li>
+      {% for item in cart_items_list %}
+        {% include "order/order_list_item.html" with item=item %}
+      {% endfor %}
+    </ul>
+
+  </div>
+
+</div>
 
 {% endblock body %}
