order summary view

--- a/webstore/templates/cart/cart_list_item.html
+++ b/webstore/templates/cart/cart_list_item.html
@@ -1,5 +1,5 @@
 {{object.product.name}}
-<span class="" data-badge-caption="EUR" id="item_value">{{object.item_value}}</span>
+<span class="" data-badge-caption="EUR" id="item_value">{{object.value}}</span>
 
 <div class="secondary-content">
     <a href="{% url 'cart:quick-add-item' object.product.id %}" class="add_one_item">
