--- a/webstore/templates/order/order_list_item.html
+++ b/webstore/templates/order/order_list_item.html
@@ -1,6 +1,6 @@
 <li class="collection-item">
   {{item.product.name}}
   <div class="secondary-content">
-    {{item.item_value}} | {{item.quantity}} pcs.
+    {{item.value}} | {{item.quantity}} pcs.
   </div>
 <li>
