--- a/webstore/templates/users/login.html
+++ b/webstore/templates/users/login.html
@@ -2,13 +2,29 @@
 
 {% block body %}
 <div class="row">
-    <div class="col s12 m8 offset-m2">
+    <!-- login form -->
+    <div class="col s12 m6">
     <ul class="collection with-header">
         <li class="collection-header"><h4>Login</h4></li>
         <li class="collection-item">
-            <form action="" method="post">
+            {{ form.errors }}
+            <form action="{% url 'users:login' %}" method="post">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ login_form.as_p }}
+                <input type="submit" value="submit">
+            </form>
+        </li>
+    </ul>
+    </div>
+
+    <!-- register form -->
+    <div class="col s12 m6">
+    <ul class="collection with-header">
+        <li class="collection-header"><h4>Register</h4></li>
+        <li class="collection-item">
+            <form action="{% url 'users:register' %}" method="post">
+                {% csrf_token %}
+                {{ register_form.as_p }}
                 <input type="submit" value="submit">
             </form>
         </li>
