renamed templates, and changed navbar

--- a/webstore/templates/base.html
+++ b/webstore/templates/base.html
@@ -35,7 +35,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
     <script src="{% static 'scripts/ajax-utils.js' %}"></script>
-
+    <script src="{% static 'scripts/navbar.js' %}"></script>
     {% block scripts %}
     {% endblock scripts %}
     </div>
