--- a/webstore/templates/order/order_detail.html
+++ b/webstore/templates/order/order_detail.html
@@ -5,7 +5,8 @@ Order summary
 {% endblock title %}
 
 {% block body %}
-
+# adres dostawy
+# status platnosci
 <ol>
 {% for object in object.items %}
     <li>
