fiter form and payments list view

--- a/webstore/templates/dashboard/navbar.html
+++ b/webstore/templates/dashboard/navbar.html
@@ -36,7 +36,9 @@
     <li>
       <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
           <i class="material-icons">monetization_on</i>Payments</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-body">
+          <a href="{% url 'dashboard:payment-list' %}" class="collection-item">List Payments</a>
+      </div>
     </li>
     <li>
       <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
