--- a/webstore/templates/payment/user_payment_list.html
+++ b/webstore/templates/payment/user_payment_list.html
@@ -6,9 +6,9 @@
     <li class="collection-header"><h4>Outstanding payments</h4></li>
 
     {%for object in object_list %}
-    <li class="collection-item">Created: {{ object.created }}, Value: {{ object.value }}</li>
+    <li class="collection-item">Created: {{ object.created }}, Value: {{ object.value }}, Days outstainding: {{object.days_outstanding}}</li>
     {% endfor %}
-    
+
 </ul>
 
 {% endblock body %}
