--- a/webstore/templates/dashboard/navbar.html
+++ b/webstore/templates/dashboard/navbar.html
@@ -46,6 +46,17 @@
     </li>
     <li>
       <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
+          <i class="material-icons">monetization_on</i>Deliveries</div>
+      <div class="collapsible-body">
+          <div class="collection">
+              <a href="{% url 'dashboard:delivery-list' status='awaiting_payment' %}" class="collection-item">Awating payment</a>
+              <a href="{% url 'dashboard:delivery-list' status='ready_for_shipping' %}" class="collection-item">Ready for shipping</a>
+              <a href="{% url 'dashboard:delivery-list' status='shipped' %}" class="collection-item">Shipped</a>
+          </div>
+      </div>
+    </li>
+    <li>
+      <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
           <i class="material-icons">multiline_chart</i>Reports</div>
       <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
     </li>
