--- a/webstore/templates/order/order_list.html
+++ b/webstore/templates/order/order_list.html
@@ -6,8 +6,8 @@
     <div class="collection-header"><h4>Your orders</h4></div>
   {% for object in object_list %}
     <a class="collection-item" href="{% url 'order:order-detail' pk=object.pk %}">
-      Items: {{object.item_count }}, Value {{object.value}},
-      Created: {{object.created}}, Status: {{object.status}}
+      Items: {{ object.item_count }}, Value {{ object.value }},
+      Created: {{ object.created }}, Status: {{ object.get_status_display }}
     </a>
   {% endfor %}
 </div>
