--- a/webstore/templates/dashboard/navbar.html
+++ b/webstore/templates/dashboard/navbar.html
@@ -46,7 +46,7 @@
     </li>
     <li>
       <div class="collapsible-header blue-grey darken-4 yellow-text text-lighten-5">
-          <i class="material-icons">monetization_on</i>Deliveries</div>
+          <i class="material-icons">airport_shuttle</i>Deliveries</div>
       <div class="collapsible-body">
           <div class="collection">
               <a href="{% url 'dashboard:delivery-list' status='awaiting_payment' %}" class="collection-item">Awating payment</a>
