order item update

--- a/webstore/templates/dashboard/order/order_detail.html
+++ b/webstore/templates/dashboard/order/order_detail.html
@@ -7,7 +7,14 @@
     <ul class="collection with-header col s12">
         <li class="collection-header"><h4>Order details</h4></li>
         {% for item in object.items %}
-        <li class="collection-item">{{item.product.name}}, {{item.quantity}} pcs, {{item.value}} </li>
+        <li class="collection-item">
+            {{item.product.name}}, {{item.quantity}} pcs, {{item.value}}
+            <div class="secondary-content">
+                <a href="#">ADD PRODUCT</a>|
+                <a href="{% url 'dashboard:order-item-update' pk=item.pk %}">EDIT</a>|
+                <a href="{% url 'dashboard:order-item-delete' pk=item.pk %}">DELETE</a>
+            </div>
+        </li>
         {% endfor %}
     </ul>
 </div>
