products list fiterling

--- a/webstore/templates/product/product_list.html
+++ b/webstore/templates/product/product_list.html
@@ -13,8 +13,8 @@
     <div class="col s3">
         <form action="" method="get">
             {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="filter">
+            {{ filter_form.as_p }}
+            <input type="submit" value="filter" class="btn">
         </form>
     </div>
 
