--- a/webstore/templates/product/product_list_item.html
+++ b/webstore/templates/product/product_list_item.html
@@ -15,7 +15,7 @@
     <div class="card-content">
         <p>{{object.description}}</p>
         <a href="{% url 'product:product-detail' object.slug %}">
-            <button class="btn small">details</button>
+            <button class="btn small" style="width:100%;">details</button>
         </a>
     </div>
 </div>
