dashboard urls update

--- a/webstore/templates/dashboard/payment/payment_list.html
+++ b/webstore/templates/dashboard/payment/payment_list.html
@@ -17,14 +17,9 @@
         <li class="collection-header"><h4>Payments list</h4></li>
 
         {%for object in object_list %}
-        <li class="collection-item">User: {{ object.user }}, Value: {{ object.value }}, Days outstainding: {{object.days_outstanding}}
-
-            <a href="{% url 'dashboard:payment-update' pk=object.id %}" class="secondary-content tooltipped btn-small"
-               data-position="left" data-tooltip="change status of this payment">
-                change status
-            </a>
-
-        </li>
+        <a href="{% url 'dashboard:payment-update' pk=object.id %}" class="collection-item">
+            User: {{ object.user }}, Value: {{ object.value }}, Days outstainding: {{object.days_outstanding}}
+        </a>
         {% endfor %}
     </ul>
 </div>
