--- a/webstore/templates/dashboard/product/product_list.html
+++ b/webstore/templates/dashboard/product/product_list.html
@@ -9,13 +9,13 @@
             <span class="title">{{ object.name }}</span>,
                     Actual price: {{ object.price }}
             <div class="secondary-content">
-                <a href="{% url 'dashboard:product-update' pk=object.id %}">
+                <a href="{% url 'dashboard:product-update' slug=object.slug %}">
                     EDIT
                 </a>|
-                <a href="{% url 'dashboard:product-delete' pk=object.id %}">
+                <a href="{% url 'dashboard:product-delete' slug=object.slug %}">
                     DELETE
                 </a>|
-                <a href="{% url 'dashboard:product-price-list' pk=object.id %}">
+                <a href="{% url 'dashboard:product-price-list' number=object.number %}">
                     PRICING
                 </a>
             </div>
