used django filter

--- a/webstore/templates/product/product_list.html
+++ b/webstore/templates/product/product_list.html
@@ -12,7 +12,7 @@
 
     <div class="col s3">
         <form action="" method="get">
-            {{ filter_form.as_p }}
+            {{ filter.form.as_p }}
             <input type="submit" value="filter" class="btn">
         </form>
     </div>
