--- a/webstore/templates/product/product_list_item.html
+++ b/webstore/templates/product/product_list_item.html
@@ -6,14 +6,14 @@
         {% else %}
             <img src={% static 'images/default.png' %}>
         {% endif %}
-        <span class="card-title">{{object.name}}</span>
+        <span class="card-title black-text">{{object.name}}</span>
         <a href="{% url 'cart:quick-add-item' object.id %}"
            class="btn-floating halfway-fab waves-effect waves-light red quick-add-item">
            <i class="material-icons">add_shopping_cart</i>
         </a>
     </div>
     <div class="card-content">
-        <p>{{object.description}}</p>
+        <p>Price: {{ object.price }}</p>
         <a href="{% url 'product:product-detail' object.slug %}">
             <button class="btn small" style="width:100%;">details</button>
         </a>
